# opengl-stuff

./: README.md
2d/: CMakeLists.tx  cmakelists.txt
2d/res/: fragment.glsl  vertex.glsl
2d/src/: common.h  main.c  render.c  render.h  shader.c  shader.h  texture.c
collision/: CMakeLists.txt
collision/res/: fragment.fs  vertex.vs
collision/src/: draw.c  draw.h  error.c  error.h  init.c  init.h  main.c  shader.c  shader.h  state.h  update.c  update.h
cubes/: CMakeLists.txt
cubes/src/: init.h
dep/glad/src/: glad.c
lib/glad/include/glad/: glad.h
lighting/: CMakeLists.txt  makefile
lighting/assets/: cube_frag.glsl  light_vert.glsl
lighting/res/: cube_vert.glsl  cubie_frag.glsl  cubie_vert.glsl  light_frag.glsl
lighting/src/: camera.c  camera.h  common.h  cubie.c  cubie.h  images.c  images.h  main.c  render.c  render.h  shader.c  shader.h  shader_src.h  shaders.h  shadersource.h  shadertext.h  texture.c  texture.h  verts.c  verts.h  window.c  window.h
spinning cubes/: CMakeLists.txt  makefile
spinning cubes/assets/shaders/: vertex.vs
spinning cubes/libs/: glad.c
spinning cubes/libs/include/glad/: glad.h
spinning cubes/res/shaders/: fragment.fs
spinning cubes/src/: camera.h  common.h  cubes.h  init.h  main.c  shader.h  texture.h
